--- a/curriculo.html
+++ b/curriculo.html
@@ -12,7 +12,7 @@
 
     <header class="nav-down">
         <div class="nome">
-            <a id="home" href="pgMuriloMayer.html">
+            <a id="home" href="index.html">
                 <h1>Murilo Mayer</h1>
                 <p id="j">Information Systems Student</p>
             </a>
