--- a/portifolio.html
+++ b/portifolio.html
@@ -11,7 +11,7 @@
 <body>
     <header class="nav-down">
         <div class="nome">
-            <a id="home" href="pgMuriloMayer.html">
+            <a id="home" href="index.html">
                 <h1>Murilo Mayer</h1>
                 <p id="j">Information Systems Student</p>
             </a>
