--- a/curriculo.html
+++ b/curriculo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
     <link rel="stylesheet" href="curriculo.css">
+    <link rel="shortcut icon" href="fotos/favicon.ico" type="image/x-icon">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
@@ -83,11 +84,11 @@
                 <span class="linguagens">
                 <h3>Linguagens</h3>
                 <picture>
-                    <img id="html" src="../Fotos/html.png" alt="htmllogo">
-                    <img id="css" src="../Fotos/css.png" alt="csslogo">
-                    <img src="../Fotos/js.png" alt="jslogo">
+                    <img id="html" src="Fotos/html.png" alt="htmllogo">
+                    <img id="css" src="Fotos/css.png" alt="csslogo">
+                    <img src="Fotos/js.png" alt="jslogo">
                     <br>
-                    <img id="python" src="../Fotos/python.png" alt="pythonlogo">
+                    <img id="python" src="Fotos/python.png" alt="pythonlogo">
                 </picture>
                 </span>
                 <hr>
