--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Murilo</title>
     <link rel="stylesheet" href="murilo.css">
     <link rel="shortcut icon" href="../Fotos/icons8-código-16.png" type="image/x-icon">
-
+    <link rel="shortcut icon" href="fotos/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
       </div>
       
     <div class="header">
-        <img id="foto" src="../Fotos/fotolinkedin.jpeg" alt="">
+        <img id="foto" src="fotos/fotolinkedin.jpeg" alt="">
         <h1>Murilo Mayer V. N.</h1>
     </div>
     <div class="links">
