--- a/curriculo.html
+++ b/curriculo.html
@@ -84,11 +84,11 @@
                 <span class="linguagens">
                 <h3>Linguagens</h3>
                 <picture>
-                    <img id="html" src="Fotos/html.png" alt="htmllogo">
-                    <img id="css" src="Fotos/css.png" alt="csslogo">
-                    <img src="Fotos/js.png" alt="jslogo">
+                    <img id="html" src="fotos/html.png" alt="htmllogo">
+                    <img id="css" src="fotos/css.png" alt="csslogo">
+                    <img src="fotos/js.png" alt="jslogo">
                     <br>
-                    <img id="python" src="Fotos/python.png" alt="pythonlogo">
+                    <img id="python" src="fotos/python.png" alt="pythonlogo">
                 </picture>
                 </span>
                 <hr>
