--- a/portifolio.html
+++ b/portifolio.html
@@ -35,32 +35,32 @@
             <nav><a id="git" href="https://github.com/MuriloMayer/MaquinaDeRefrigeranteRA" target="_blank">Maquina De Refrigerantes</a></nav>
             <p>A Maquina de refrigerantes foi o primeiro projeto grande, feito inteiramente em Python, como projeto formativo da disciplina de Raciocínio Algorítmico</p>
             <h3>Linguagens Utilizadas:</h3>
-            <img src="Fotos/python.png" alt="python">
+            <img src="fotos/python.png" alt="python">
         </div>
 
         <div class="box">
             <nav><a id="git" href="https://github.com/MuriloMayer/Dev2Player" target="_blank">Dev 2 Player</a></nav>
             <p>O Dev 2 Player é um projeto da disciplina de experiência criativa, no qual desenvolvemos um site para jogadores e desenvolvoderes de jogos poderem se comunicar e efetuar/receber avaliaçoes, este projeto foi feito utilizandoHTML:5, CSS:3 E JavaScript</p>
             <h3>Linguagens Utilizadas:</h3>
-            <img src="Fotos/html.png" alt="html">
-            <img src="Fotos/css.png" alt="css">
-            <img src="Fotos/js.png" alt="js">
+            <img src="fotos/html.png" alt="html">
+            <img src="fotos/css.png" alt="css">
+            <img src="fotos/js.png" alt="js">
         </div>
 
         <div class="box">
             <nav><a id="git" href="https://github.com/MuriloMayer/Portifolio" target="_blank">Site Pessoal</a></nav>
             <p>Meu site pessoal (O qual vocês estam navegando) , foi um projeto pessoal porem incentivado na materia de Desenvolvimento De Carreira, Sendo Feito Utilizando HTML:5, CSS:3 E JavaScript </p>
             <h3>Linguagens Utilizadas:</h3>
-            <img src="Fotos/html.png" alt="html">
-            <img src="Fotos/css.png" alt="css">
-            <img src="Fotos/js.png" alt="js">
+            <img src="fotos/html.png" alt="html">
+            <img src="fotos/css.png" alt="css">
+            <img src="fotos/js.png" alt="js">
         </div>
 
         <div class="box">
             <nav><a id="git" href="https://github.com/MuriloMayer/MaquinaDeRefrigeranteRA" target="_blank">Maquina De Refrigerantes V2</a></nav>
             <p>A Maquina De Refrigerantes V2, Como o nome sugere é uma atualização do primeiro projeto de maquina de refrigerantes feito ao inicio da materia de Raciocínio Algorítmico, Sendo ele o projeto final da materia, tendo varias atualizações e otimizações em seu codigo.</p>
             <h3>Linguagens Utilizadas:</h3>
-            <img src="Fotos/python.png" alt="python">
+            <img src="fotos/python.png" alt="python">
         </div>
 
 
